# tex-annotater

./: .dockerignore  .gitignore  Dockerfile.backend  Dockerfile.frontend  backup.sh  docker-compose.yaml  ec2.nginx.conf  gunicorn.conf.py  index.html  next.config.mjs  nginx.conf  package-lock.json  package.json  pyproject.toml  tsconfig.json  vite.config.js
src/: App.tsx  main.jsx  main.tsx
src/app/: globals.css  layout.tsx  page.tsx  style.css
src/app/components/: PDFViewer.tsx  PdfViewer.tsx  TextHighlighter.tsx  TopBar.tsx
src/app/components/Annotater/: Annotater.tsx  LinkMenu.tsx  MarkMenu.tsx  Split.tsx
src/app/components/annotator/: Annotator.tsx  LinkMenu.tsx  MarkMenu.tsx  Menu.tsx  Split.tsx
src/app/lib/: colors.js  colors.ts  span.js  span.ts  utils.ts
src/app/pages/: Token.tsx  _app.tsx
src/app/pages/AnnotationTool/: index.tsx
src/app/pages/Layout/: index.tsx
src/app/pages/SignIn/: index.tsx
src/app/pages/SignUp/: index.tsx
src/app/style/: globals.css
src/backend/: data.py  data_utils.py  main.py  scoring.py  search.py  users.py
src/lib/: GlobalState.tsx  Patterns.tsx  Token.tsx  colors.ts  consts.ts  span.ts  theme.tsx  utils.ts
src/lib/components/: Table.tsx
src/lib/components/Annotater/: Annotater.tsx  LinkMenu.tsx  MarkMenu.tsx  Menu.tsx  Split.tsx
src/lib/components/TopBar/: AnnotationMenu.tsx  CompareDialog.tsx  CompareModal.tsx  ConfirmationModal.tsx  DocumentSelectorModal.tsx  MenuItemProps.tsx  NewAnnotationForm.tsx  SaveAsForm.tsx  SaveSelector.tsx  ScoresDialog.tsx  ScoresModal.tsx  TopBar.tsx
src/pages/: Patterns.tsx  Token.tsx  Tracker.tsx
src/pages/AnnotationTool/: index.tsx
src/pages/AnnotationTool/components/: GlobalState.tsx  PDFViewer.tsx  TopBar.tsx
src/pages/AnnotationTool/components/Annotater/: Annotater.tsx  CustomMenu.tsx  LinkMenu.tsx  MarkMenu.tsx  Menu.tsx  Split.tsx
src/pages/AnnotationTool/components/TopBar/: AnnotationMenu.tsx  DocumentSelectorMenuItem.tsx  (+8 more)
src/pages/ComparisonTool/: index.tsx
src/pages/Dashboard/: Dashboard.tsx  index.tsx
src/pages/SignIn/: index.tsx
src/pages/SignUp/: index.tsx
src/style/: globals.css  style.css
