[project]
name = "tex-annotater"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Nilay Patel", email = "nilaypatel2@gmail.com" }
]
dependencies = [
    "boto3>=1.34.55",
    "flask>=3.0.2",
    "python-dotenv>=1.0.1",
    "flask-cors>=4.0.0",
    "pandas>=2.2.1",
    "randomname>=0.2.1",
    "py-bcrypt>=0.4",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ipython>=8.22.2",
]

[tool.rye.scripts]
dev = {cmd = "flask --app src/backend/main.py run --debug"}
prod = {cmd = "flask --app src/backend/main.py run"}

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/tex_annotater"]
