[project]
name = "tex-annotater"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Nilay Patel", email = "nilaypatel2@gmail.com" }
]
dependencies = [
    "boto3>=1.34.55",
    "flask>=3.0.2",
    "flask-cors>=4.0.0",
    "pandas>=2.2.1",
    "randomname>=0.2.1",
    "gunicorn>=21.2.0",
    "tqdm>=4.66.2",
    "gdown>=5.1.0",
    "rapidfuzz>=3.6.2",
    "python-dotenv>=1.0.1",
    "passlib>=1.7.4",
    "apscheduler>=3.10.4",
    "transformers>=4.42.3",
    "psycopg>=3.2.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 120

[tool.rye]
managed = true
dev-dependencies = [
    "ipython>=8.22.2",
    "epc>=0.0.5",
    "orjson>=3.9.15",
    "sexpdata>=1.0.2",
    "six>=1.16.0",
    "setuptools>=69.2.0",
    "paramiko>=3.4.0",
    "rapidfuzz>=3.6.2",
    "pyright>=1.1.355",
    "black>=24.3.0",
]

[tool.rye.scripts]
dev = {cmd = "flask --app src/backend/main.py run --debug"}
prod = {cmd = "gunicorn -w 4 'src.backend.main:app' --bind 127.0.0.1:5000 "}

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/tex_annotater"]
